--- a/visual_design.html
+++ b/visual_design.html
@@ -10,7 +10,9 @@
     <style>
       h4 {
         text-align: center;
-        height: 25px;
+        background-color: rgba(45, 45, 45, 0.1);
+        padding: 10px;
+        font-size: 27px;
       }
       p {
         text-align: justify;
@@ -19,6 +21,12 @@
         text-align: left;
         color: black;
       }
+
+      #thumbnail {
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19),
+          0 6px 6px rgba(0, 0, 0, 0.23);
+      }
+
       .fullCard {
         width: 245px;
         border: 1px solid #ccc;
@@ -33,10 +41,11 @@
         margin-bottom: 30px;
       }
     </style>
-    <div class="fullCard">
+    <div class="fullCard" id="thumbnail">
       <div class="cardContent">
         <div class="cardText">
-          <h4>Google</h4>
+          <h4>Alphabet</h4>
+          <hr />
           <p>
             <em
               >Google was founded by Larry Page and Sergey Brin while they were
