--- a/survey-form/survey.html
+++ b/survey-form/survey.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="survey.css" />
     <title>Survey Form</title>
   </head>
   <body>
@@ -21,6 +21,7 @@
                 <label class="field-label">
                   <span class="field-span"> Name </span>
                   <input
+                    id="name"
                     type="text"
                     class="input"
                     placeholder="Enter your name"
@@ -31,6 +32,7 @@
                 <label class="field-label">
                   <span class="field-span">Email</span>
                   <input
+                    id="email"
                     type="email"
                     class="input"
                     placeholder="Enter your Email"
@@ -40,7 +42,12 @@
               <div class="form">
                 <label class="field-label">
                   <span class="field-span">Age(optional)</span>
-                  <input type="number" class="input" placeholder="Age" />
+                  <input
+                    id="number"
+                    type="number"
+                    class="input"
+                    placeholder="Age"
+                  />
                 </label>
               </div>
               <div class="form">
@@ -48,14 +55,112 @@
                   <span class="field-span"
                     >Which option best describes your current role?</span
                   >
-                  <select class="select">
+                  <select id="select">
                     <option value="role" selected>Select current role</option>
                     <option value="student">Student</option>
                     <option value="full">Full Time Job</option>
                     <option value="learner">Full Time Learner</option>
                     <option value="not-say">Prefer not to say</option>
+                    <option value="other">Other</option>
                   </select>
                 </label>
+              </div>
+              <div class="form">
+                <form>
+                  <legend class="radio-btn">
+                    Would you recommend freeCodeCamp to a friend?
+                  </legend>
+                  <div class="radioo">
+                    <input
+                      type="radio"
+                      id="definitely"
+                      name="levels"
+                      value="definitely"
+                    />
+                    <label for="definitely">Definitely</label><br />
+                    <input
+                      type="radio"
+                      id="maybe"
+                      name="levels"
+                      value="maybe"
+                    />
+                    <label for="maybe">Maybe</label><br />
+                    <input
+                      type="radio"
+                      id="not-sure"
+                      name="levels"
+                      value="not-sure"
+                    />
+                    <label for="not-sure">Not sure</label>
+                  </div>
+                </form>
+              </div>
+              <div id="form1" class="form">
+                <label class="field-form">
+                  <span class="field-span"
+                    >What is your favorite feature of freeCodeCamp?</span
+                  >
+                  <select id="select">
+                    <option value="role" selected>Select an option</option>
+                    <option value="student">Challenges</option>
+                    <option value="full">Project</option>
+                    <option value="learner">Community</option>
+                    <option value="not-say">Open Source</option>
+                  </select>
+                </label>
+              </div>
+              <div class="form">
+                <form>
+                  <legend class="radio-btn">
+                    What would you like to see improved? (Check all that apply)
+                  </legend>
+                  <div class="form-group">
+                    <label class="checkbox-group">
+                      <input type="checkbox" class="checkbox" required />
+                      Front-end Projects
+                    </label>
+                    <label class="checkbox-group">
+                      <input type="checkbox" class="checkbox" required />
+                      Back-end Projects
+                    </label>
+                    <label class="checkbox-group">
+                      <input type="checkbox" class="checkbox" required />
+                      Data Visualization
+                    </label>
+                    <label class="checkbox-group">
+                      <input type="checkbox" class="checkbox" required />
+                      Challenges
+                    </label>
+                    <label class="checkbox-group">
+                      <input type="checkbox" class="checkbox" required />
+                      Open Source Community
+                    </label>
+                    <label class="checkbox-group">
+                      <input type="checkbox" class="checkbox" required />
+                      Gitter help rooms
+                    </label>
+                    <label class="checkbox-group">
+                      <input type="checkbox" class="checkbox" required />
+                      Videos
+                    </label>
+                    <label class="checkbox-group">
+                      <input type="checkbox" class="checkbox" required />
+                      City Meetups
+                    </label>
+                    <label class="checkbox-group">
+                      <input type="checkbox" class="checkbox" required />
+                      Wiki
+                    </label>
+                    <label class="checkbox-group">
+                      <input type="checkbox" class="checkbox" required />
+                      Forum
+                    </label>
+                    <label class="checkbox-group">
+                      <input type="checkbox" class="checkbox" required />
+                      Additional Courses
+                    </label>
+                  </div>
+                </form>
               </div>
             </form>
           </div>
