--- a/survey-form/survey.html
+++ b/survey-form/survey.html
@@ -165,6 +165,17 @@
                   </div>
                 </form>
               </div>
+              <div class="form-group">
+                <p>Any comments or suggestions?</p>
+                <textarea
+                  name="comment"
+                  id="comments"
+                  placeholder="Enter your comment here..."
+                ></textarea>
+              </div>
+              <div class="form-group">
+                <button type="submit" id="submit"></button>
+              </div>
             </form>
           </div>
         </div>
