--- a/survey-form/survey.html
+++ b/survey-form/survey.html
@@ -18,40 +18,45 @@
           <div class="container">
             <form id="survey-form">
               <div class="form">
-                <label class="field-label">
-                  <span class="field-span"> Name </span>
-                  <input
-                    id="name-label"
-                    type="text"
-                    class="input"
-                    placeholder="Enter your name"
-                  />
-                </label>
+                <label id="name-label" class="field-label" for="name"
+                  >Name</label
+                >
+
+                <input
+                  id="name"
+                  name="name"
+                  type="text"
+                  class="input"
+                  placeholder="Enter your name"
+                  required
+                />
               </div>
               <div class="form">
-                <label class="field-label" for="email">
-                  <span class="field-span">Email</span>
-                  <input
-                    id="email-label"
-                    type="email"
-                    class="input"
-                    placeholder="Enter your Email"
-                    required
-                  />
-                </label>
+                <label id="email-label" class="field-label" for="email"
+                  >Email</label
+                >
+
+                <input
+                  id="email"
+                  type="email"
+                  class="input"
+                  placeholder="Enter your Email"
+                  required
+                />
               </div>
               <div class="form">
-                <label class="field-label">
-                  <span class="field-span">Age(optional)</span>
-                  <input
-                    id="number-label"
-                    type="number"
-                    class="input"
-                    min="5"
-                    max="100"
-                    placeholder="Age"
-                  />
-                </label>
+                <label id="number-label" class="field-label"
+                  >Age(optional)</label
+                >
+
+                <input
+                  id="number"
+                  type="number"
+                  class="input"
+                  min="5"
+                  max="100"
+                  placeholder="Age"
+                />
               </div>
               <div id="dropdown" class="form">
                 <label class="field-form">
@@ -69,34 +74,27 @@
                 </label>
               </div>
               <div class="form">
-                <form>
-                  <legend class="radio-btn">
-                    Would you recommend freeCodeCamp to a friend?
-                  </legend>
-                  <div class="radioo">
-                    <input
-                      type="radio"
-                      id="definitely"
-                      name="levels"
-                      value="definitely"
-                    />
-                    <label for="definitely">Definitely</label><br />
-                    <input
-                      type="radio"
-                      id="maybe"
-                      name="levels"
-                      value="maybe"
-                    />
-                    <label for="maybe">Maybe</label><br />
-                    <input
-                      type="radio"
-                      id="not-sure"
-                      name="levels"
-                      value="not-sure"
-                    />
-                    <label for="not-sure">Not sure</label>
-                  </div>
-                </form>
+                <legend class="radio-btn">
+                  Would you recommend freeCodeCamp to a friend?
+                </legend>
+                <div class="radioo">
+                  <input
+                    type="radio"
+                    id="definitely"
+                    name="levels"
+                    value="definitely"
+                  />
+                  <label for="definitely">Definitely</label><br />
+                  <input type="radio" id="maybe" name="levels" value="maybe" />
+                  <label for="maybe">Maybe</label><br />
+                  <input
+                    type="radio"
+                    id="not-sure"
+                    name="levels"
+                    value="not-sure"
+                  />
+                  <label for="not-sure">Not sure</label>
+                </div>
               </div>
               <div id="form1" class="form">
                 <label class="field-form">
@@ -113,57 +111,110 @@
                 </label>
               </div>
               <div class="form">
-                <form>
-                  <legend class="radio-btn">
-                    What would you like to see improved? (Check all that apply)
-                  </legend>
-                  <div class="form-group">
-                    <label class="checkbox-group">
-                      <input type="checkbox" class="checkbox" required />
-                      Front-end Projects
-                    </label>
-                    <label class="checkbox-group">
-                      <input type="checkbox" class="checkbox" required />
-                      Back-end Projects
-                    </label>
-                    <label class="checkbox-group">
-                      <input type="checkbox" class="checkbox" required />
-                      Data Visualization
-                    </label>
-                    <label class="checkbox-group">
-                      <input type="checkbox" class="checkbox" required />
-                      Challenges
-                    </label>
-                    <label class="checkbox-group">
-                      <input type="checkbox" class="checkbox" required />
-                      Open Source Community
-                    </label>
-                    <label class="checkbox-group">
-                      <input type="checkbox" class="checkbox" required />
-                      Gitter help rooms
-                    </label>
-                    <label class="checkbox-group">
-                      <input type="checkbox" class="checkbox" required />
-                      Videos
-                    </label>
-                    <label class="checkbox-group">
-                      <input type="checkbox" class="checkbox" required />
-                      City Meetups
-                    </label>
-                    <label class="checkbox-group">
-                      <input type="checkbox" class="checkbox" required />
-                      Wiki
-                    </label>
-                    <label class="checkbox-group">
-                      <input type="checkbox" class="checkbox" required />
-                      Forum
-                    </label>
-                    <label class="checkbox-group">
-                      <input type="checkbox" class="checkbox" required />
-                      Additional Courses
-                    </label>
-                  </div>
-                </form>
+                <legend class="radio-btn">
+                  What would you like to see improved? (Check all that apply)
+                </legend>
+                <div class="form-group">
+                  <label class="checkbox-group">
+                    <input
+                      type="checkbox"
+                      value="atribute"
+                      class="checkbox"
+                      required
+                    />
+                    Front-end Projects
+                  </label>
+                  <label class="checkbox-group">
+                    <input
+                      type="checkbox"
+                      value="atribute"
+                      class="checkbox"
+                      required
+                    />
+                    Back-end Projects
+                  </label>
+                  <label class="checkbox-group">
+                    <input
+                      type="checkbox"
+                      value="atribute"
+                      class="checkbox"
+                      required
+                    />
+                    Data Visualization
+                  </label>
+                  <label class="checkbox-group">
+                    <input
+                      type="checkbox"
+                      value="atribute"
+                      class="checkbox"
+                      required
+                    />
+                    Challenges
+                  </label>
+                  <label class="checkbox-group">
+                    <input
+                      type="checkbox"
+                      value="atribute"
+                      class="checkbox"
+                      required
+                    />
+                    Open Source Community
+                  </label>
+                  <label class="checkbox-group">
+                    <input
+                      type="checkbox"
+                      value="atribute"
+                      class="checkbox"
+                      required
+                    />
+                    Gitter help rooms
+                  </label>
+                  <label class="checkbox-group">
+                    <input
+                      type="checkbox"
+                      value="atribute"
+                      class="checkbox"
+                      required
+                    />
+                    Videos
+                  </label>
+                  <label class="checkbox-group">
+                    <input
+                      type="checkbox"
+                      value="atribute"
+                      class="checkbox"
+                      required
+                    />
+                    City Meetups
+                  </label>
+                  <label class="checkbox-group">
+                    <input
+                      type="checkbox"
+                      value="atribute"
+                      class="checkbox"
+                      required
+                    />
+                    Wiki
+                  </label>
+                  <label class="checkbox-group">
+                    <input
+                      type="checkbox"
+                      value="atribute"
+                      class="checkbox"
+                      required
+                    />
+                    Forum
+                  </label>
+                  <label class="checkbox-group">
+                    <input
+                      type="checkbox"
+                      value="atribute"
+                      class="checkbox"
+                      required
+                    />
+                    Additional Courses
+                  </label>
+                </div>
               </div>
               <div class="form-group">
                 <p>Any comments or suggestions?</p>
@@ -174,7 +225,7 @@
                 ></textarea>
               </div>
               <div class="form-group">
-                <button type="submit" id="submit"></button>
+                <button id="submit" type="submit">Submit</button>
               </div>
             </form>
           </div>
