--- a/survey-form/survey.html
+++ b/survey-form/survey.html
@@ -60,7 +60,7 @@
               </div>
               <div id="dropdown" class="form">
                 <label class="field-form">
-                  <span class="field-span"
+                  <span class="field-span1"
                     >Which option best describes your current role?</span
                   >
                   <select id="select">
@@ -98,7 +98,7 @@
               </div>
               <div id="form1" class="form">
                 <label class="field-form">
-                  <span class="field-span"
+                  <span class="field-span1"
                     >What is your favorite feature of freeCodeCamp?</span
                   >
                   <select id="select">
