--- a/landing-page/landing.html
+++ b/landing-page/landing.html
@@ -12,7 +12,9 @@
       <header id="header">
         <div class="logo">
           <img
-            src="https://docs.expo.dev/static/images/tutorial/logo.png"
+            src="https://d33wubrfki0l68.cloudfront.net/ef6926f135b5bfeed6122a7a5336bf94b1ea497f/4dbf7/images/bannerbear_logo.svg"
+            width="250"
+            height="100"
             alt="images"
           />
         </div>
@@ -30,6 +32,78 @@
           </ul>
         </nav>
       </header>
+      <section id="hero">
+        <h2>Handcrafted, home-made masterpieces</h2>
+        <form id="form" action="">
+          <input
+            name="email"
+            id="email"
+            type="email"
+            placeholder="Enter your email address"
+            required
+          />
+          <input id="submit" type="submit" value="get started" class="btn" />
+        </form>
+      </section>
+      <div class="container">
+        <section id="features">
+          <div class="grid">
+            <div class="icon">
+              <img
+                src="https://iconarchive.com/download/i7919/hopstarter/soft-scraps/My-Pictures.ico"
+                width="60"
+                height="50"
+                alt="icon"
+              />
+            </div>
+            <div class="desc">
+              <h2>Premium Materials</h2>
+              <p>
+                Our trombones use the shiniest brass which is sourced locally.
+                This will increase the longevity of your purchase.
+              </p>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="icon">
+              <img
+                src="https://i.stack.imgur.com/6ZjZM.png"
+                width="60"
+                height="50"
+                alt="icon"
+              />
+            </div>
+            <div class="desc">
+              <h2>Fast Shipping</h2>
+              <p>
+                We make sure you recieve your trombone as soon as we have
+                finished making it. We also provide free returns if you are not
+                satisfied.
+              </p>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="icon">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUtUj1IhcnEsmDfexTwTVUz-h82E9IMoAmNw&usqp=CAU"
+                width="60"
+                height="50"
+                alt="icon"
+              />
+            </div>
+            <div class="desc">
+              <h2>Quality Assurance</h2>
+              <p>
+                For every purchase you make, we will ensure there are no damages
+                or faults and we will check and test the pitch of your
+                instrument.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section id="how-it-works"></section>
+        <section id="pricing"></section>
+      </div>
     </div>
   </body>
 </html>
