--- a/landing-page/landing.html
+++ b/landing-page/landing.html
@@ -52,7 +52,7 @@
               <img
                 src="https://iconarchive.com/download/i7919/hopstarter/soft-scraps/My-Pictures.ico"
                 width="60"
-                height="50"
+                height="60"
                 alt="icon"
               />
             </div>
@@ -69,7 +69,7 @@
               <img
                 src="https://i.stack.imgur.com/6ZjZM.png"
                 width="60"
-                height="50"
+                height="60"
                 alt="icon"
               />
             </div>
@@ -87,7 +87,7 @@
               <img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUtUj1IhcnEsmDfexTwTVUz-h82E9IMoAmNw&usqp=CAU"
                 width="60"
-                height="50"
+                height="60"
                 alt="icon"
               />
             </div>
@@ -101,8 +101,52 @@
             </div>
           </div>
         </section>
-        <section id="how-it-works"></section>
-        <section id="pricing"></section>
+        <section id="how-it-works">
+          <iframe
+            width="500"
+            height="300"
+            src="https://www.youtube.com/embed/or047P2NOjc"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </section>
+        <section id="pricing">
+          <div class="product" id="tenor">
+            <div class="level">Premium Raw Silk Fabric Cash Box</div>
+            <h2>$500</h2>
+            <ol>
+              <li>Shagun Envelope for gifting Cash/Money</li>
+              <li>Raw Silk Fabric</li>
+              <li>Ideal for occasions like Wedding, Engagement & Festivals</li>
+            </ol>
+            <button class="btn">Select</button>
+          </div>
+          <div class="product" id="bass">
+            <div class="level">Printed Ladies Portable Clutch</div>
+            <h2>$300</h2>
+            <ol>
+              <li>Premium material.</li>
+              <li>
+                Top sturdy zipper closure with zipper pulls keeps all your
+                belongings dry and safe.
+              </li>
+              <li>Compact size with large capacity design.</li>
+            </ol>
+            <button class="btn">Select</button>
+          </div>
+          <div class="product" id="valve">
+            <div class="level">Party Clutch Bag</div>
+            <h2>$200</h2>
+            <ol>
+              <li>Hand painted graffiti pouch from Seam Reap</li>
+              <li>Flawlessly handmade.</li>
+              <li>Dimensions approximately 11.5" x 9"</li>
+            </ol>
+            <button class="btn">Select</button>
+          </div>
+        </section>
       </div>
     </div>
   </body>
