--- a/landing-page/landing.html
+++ b/landing-page/landing.html
@@ -147,6 +147,20 @@
             <button class="btn">Select</button>
           </div>
         </section>
+        <footer>
+          <ul>
+            <li>
+              <a href="#">Privacy</a>
+            </li>
+            <li>
+              <a href="#">Terms</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+          <span>Copyright 2022, Svetlana Martseva</span>
+        </footer>
       </div>
     </div>
   </body>
