--- a/personal-portfolio/portfolio.html
+++ b/personal-portfolio/portfolio.html
@@ -39,7 +39,7 @@
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZ1lvSaAg7wuElXjXinNPe4yo1B7APWpj8HhOeVGUYROwIQINlLDyD9bQkYwUkPN2azl8&usqp=CAU"
             alt="project"
           />
-          <p class="project-title">
+          <p class="project-tile">
             <span class="code"></span>
             Tribute Page
             <span class="code"></span>
@@ -56,7 +56,7 @@
             src="https://image.shutterstock.com/image-vector/contact-us-flat-vector-illustration-260nw-1526514758.jpg"
             alt=""
           />
-          <p class="project-title">
+          <p class="project-tile">
             <span class="code"></span>
             Online ticket booking
             <span class="code"></span>
@@ -73,7 +73,7 @@
             src="https://thumbs.dreamstime.com/z/vector-modern-pink-yellow-mint-shapes-abstract-shape-colorful-background-banner-shapes-vector-modern-pink-yellow-mint-123480338.jpg"
             alt=""
           />
-          <p class="project-title">
+          <p class="project-tile">
             <span class="code"></span>
             Banner with shapes
             <span class="code"></span>
@@ -90,7 +90,7 @@
             src="https://thumbs.dreamstime.com/z/vector-modern-gold-black-shapes-abstract-shape-colorful-background-banner-shapes-vector-modern-gold-black-shapes-123591131.jpg"
             alt=""
           />
-          <p class="project-title">
+          <p class="project-tile">
             <span class="code"></span>
             Colorful background
             <span class="code"></span>
@@ -107,7 +107,7 @@
             src="https://img.fixthephoto.com/blog/images/gallery/news_preview_mob_image__preview_3547.png"
             alt=""
           />
-          <p class="project-title">
+          <p class="project-tile">
             <span class="code"></span>
             Reverse image search app
             <span class="code"></span>
@@ -124,7 +124,7 @@
             src="https://image.shutterstock.com/image-vector/shopping-online-on-website-mobile-260nw-1166090182.jpg"
             alt=""
           />
-          <p class="project-title">
+          <p class="project-tile">
             <span class="code"></span>
             Online shopping
             <span class="code"></span>
