--- a/landing2/landing2/landing2.html
+++ b/landing2/landing2/landing2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cafe Menu</title>
     <link rel="stylesheet" href="landing2.css" />
   </head>
   <body>
@@ -15,12 +15,6 @@
         <hr />
         <section>
           <h2>Coffee</h2>
-          <img
-            src="https://media.istockphoto.com/photos/heart-of-steam-hovering-over-a-red-coffee-cup-of-coffee-on-wooden-picture-id1283780941?b=1&k=20&m=1283780941&s=170667a&w=0&h=5OBuFujVusKI0ehMkZyWjGP3xa0zCKmeLF_kjsIrtiU="
-            alt=""
-            width="60px"
-            height="50px"
-          />
           <article class="item">
             <p class="flavor">French Vanilla</p>
             <p class="price">3.00</p>
@@ -44,12 +38,6 @@
         </section>
         <section>
           <h2>Desserts</h2>
-          <img
-            src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8NHx8fGVufDB8fHx8&w=1000&q=80"
-            width="70px"
-            height="50px"
-            alt=""
-          />
           <article class="item">
             <p class="dessert">Donut</p>
             <p class="price">1.50</p>
@@ -71,7 +59,9 @@
       <hr class="bottom-line" />
       <footer>
         <p>
-          <a href="#">Visit our website</a>
+          <a href="https://www.freecodecamp.org" target="_blank"
+            >Visit our website</a
+          >
         </p>
         <p class="address">123 Free Code Camp Drive</p>
       </footer>
