--- a/landing2/landing2/landing2.html
+++ b/landing2/landing2/landing2.html
@@ -15,6 +15,11 @@
         <hr />
         <section>
           <h2>Coffee</h2>
+          <img
+            src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg"
+            ,
+            alt="coffee icon"
+          />
           <article class="item">
             <p class="flavor">French Vanilla</p>
             <p class="price">3.00</p>
@@ -38,6 +43,11 @@
         </section>
         <section>
           <h2>Desserts</h2>
+          <img
+            src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg"
+            ,
+            alt="pie icon"
+          />
           <article class="item">
             <p class="dessert">Donut</p>
             <p class="price">1.50</p>
