--- a/css-color-markers/css-color-markers/index.html
+++ b/css-color-markers/css-color-markers/index.html
@@ -13,6 +13,9 @@
       <div class="marker one"></div>
       <div class="marker two"></div>
       <div class="marker three"></div>
+      <div class="marker four"></div>
+      <div class="marker five"></div>
+      <div class="marker six"></div>
     </div>
   </body>
 </html>
