--- a/css-color-markers/css-color-markers/index.html
+++ b/css-color-markers/css-color-markers/index.html
@@ -13,9 +13,18 @@
       <div class="marker one"></div>
       <div class="marker two"></div>
       <div class="marker three"></div>
-      <div class="marker four"></div>
-      <div class="marker five"></div>
-      <div class="marker six"></div>
+      <div class="marker four">
+        <div class="cap"></div>
+        <div class="sleeve"></div>
+      </div>
+      <div class="marker five">
+        <div class="cap"></div>
+        <div class="sleeve"></div>
+      </div>
+      <div class="marker six">
+        <div class="cap"></div>
+        <div class="sleeve"></div>
+      </div>
     </div>
   </body>
 </html>
