--- a/registration-form/index.html
+++ b/registration-form/index.html
@@ -18,11 +18,26 @@
         <label for="new-password">Create a New Password: <input id="new-password" type="password" minlength="8" required></label>
     </fieldset>
     <fieldset>
-      <label for=""></label>
-      <label for=""></label>
-      <label for=""></label>
+      <label for="personal-account">
+        <input id="personal-account" type="radio" name="account-type"> Personal Account
+      </label>
+      <label for="business-account">
+        <input id="business-account" type="radio" name="account-type"> Business Account
+      </label>
+      <label for="terms-and-conditions">
+        <input id="terms-and-conditions" type="checkbox" required> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/" target="_blank">terms and condions</a>  
+      </label>
     </fieldset>
-    <fieldset></fieldset>
+    <fieldset>
+      <label for="">
+        <p>Upload a profile picture: </p>
+        <input type="file">
+      </label>
+      <label for="">
+        <p>Input your age (years): </p>
+        <input type="number" min="13" max="120">
+      </label>
+    </fieldset>
     <input type="submit" value="Submit">
   </body>
 </html>
