--- a/registration-form/index.html
+++ b/registration-form/index.html
@@ -37,6 +37,17 @@
         <p>Input your age (years): </p>
         <input type="number" min="13" max="120">
       </label>
+      <label for="">
+        <p>How did you hear about us?</p>
+      <select name="" id="">
+        <option value="">(select one)</option>
+        <option value="1">freeCodeCamp News</option>
+        <option value="2">freeCodeCamp YouTube Channel</option>
+        <option value="3">freeCodeCamp Forum</option>
+        <option value="4">Other</option>
+      </select>
+      </label>
+      <label for="">Provide a bio: <textarea name="" id="" cols="30" rows="10"></textarea></label>
     </fieldset>
     <input type="submit" value="Submit">
   </body>
