--- a/registration-form/index.html
+++ b/registration-form/index.html
@@ -29,17 +29,17 @@
       </label>
     </fieldset>
     <fieldset>
-      <label for="">
+      <label for="profile-picture">
         <p>Upload a profile picture: </p>
-        <input type="file">
+        <input id="profile-picture" type="file">
       </label>
-      <label for="">
+      <label for="age">
         <p>Input your age (years): </p>
-        <input type="number" min="13" max="120">
+        <input id="age" type="number" min="13" max="120">
       </label>
-      <label for="">
+      <label for="referrer">
         <p>How did you hear about us?</p>
-      <select name="" id="">
+      <select name="" id="referrer">
         <option value="">(select one)</option>
         <option value="1">freeCodeCamp News</option>
         <option value="2">freeCodeCamp YouTube Channel</option>
@@ -47,7 +47,7 @@
         <option value="4">Other</option>
       </select>
       </label>
-      <label for="">Provide a bio: <textarea name="" id="" cols="30" rows="10"></textarea></label>
+      <label for="bio">Provide a bio: <textarea name="" id="bio" cols="#" rows="#"></textarea></label>
     </fieldset>
     <input type="submit" value="Submit">
   </body>
