--- a/registration-form/index.html
+++ b/registration-form/index.html
@@ -39,7 +39,7 @@
       </label>
       <label for="referrer">
         <p>How did you hear about us?</p>
-      <select name="" id="referrer">
+      <select name="referre" id="referrer">
         <option value="">(select one)</option>
         <option value="1">freeCodeCamp News</option>
         <option value="2">freeCodeCamp YouTube Channel</option>
@@ -47,7 +47,7 @@
         <option value="4">Other</option>
       </select>
       </label>
-      <label for="bio">Provide a bio: <textarea name="" id="bio" cols="#" rows="#"></textarea></label>
+      <label for="bio">Provide a bio: <textarea name="bio" id="bio" cols="30" rows="3" placeholder="I like coding on the beach..."></textarea></label>
     </fieldset>
     <input type="submit" value="Submit">
   </body>
