--- a/registration-form/index.html
+++ b/registration-form/index.html
@@ -28,16 +28,31 @@
       </fieldset>
       <fieldset>
         <label for="personal-account">
-          <input id="personal-account" type="radio" name="account-type" />
+          <input
+            id="personal-account"
+            type="radio"
+            name="account-type"
+            class="inline"
+          />
           Personal Account
         </label>
         <label for="business-account">
-          <input id="business-account" type="radio" name="account-type" />
+          <input
+            id="business-account"
+            type="radio"
+            name="account-type"
+            class="inline"
+          />
           Business Account
         </label>
         <label for="terms-and-conditions">
-          <input id="terms-and-conditions" type="checkbox" required /> I accept
-          the
+          <input
+            id="terms-and-conditions"
+            type="checkbox"
+            required
+            class="inline"
+          />
+          I accept the
           <a
             href="https://www.freecodecamp.org/news/terms-of-service/"
             target="_blank"
